# comisiones-frontend

./: .gitignore  generate-icon.ps1  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.jsx  index.css  main.jsx  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AdminPage.jsx  AnalisisTab.jsx  EditFacturaDialog.jsx  FacturasViewer.jsx  GeneralDashboard.jsx  LoginPage.jsx  ProtectedRoute.jsx  SettingsPage.jsx  UpdateData.jsx  UserDashboard.jsx  ui.jsx
src/config/: api.js
src/contexts/: AuthContext.jsx  ThemeContext.jsx
